Added basic html code for UI of the game

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissor Game</title>
 </head>
 <body>
-    
+    <h2>Rock Paper Scissor</h2>
+    <!-- Here We will display three images to user and ask him to select one to play the game. -->
+    <div class="choices">
+        <div class="rock">
+            <img src="/Images/rock.png" alt="Rock-Image">
+        </div>
+        <div class="paper">
+            <img src="/Images/paper.png" alt="Paper-image">
+        </div>
+        <div class="scissor">
+            <img src="/Images/scissor.png" alt="Scissor-image">
+        </div>
+    </div>
+
+    <!-- Now we will display the score board where we will display the scores of user and the computer too. -->
+     <div class="score-board">
+        <div class="user-score">
+            <p>0</p>
+            <p>user</p>
+        </div>
+        <div class="computer-score">
+            <p>0</p>
+            <p>computer</p>
+        </div>
+     </div>
+     <!-- ASk user to move select his choice -->
+      <div class="msg">
+        Select Your choice
+      </div>
 </body>
 </html>
