--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Rock Paper Scissor</h2>
+    <h2 class="title">Rock Paper Scissor</h2>
     <!-- Here We will display three images to user and ask him to select one to play the game. -->
     <div class="choices">
-        <div class="rock">
+        <div class="choice">
             <img src="/Images/rock.png" alt="Rock-Image">
         </div>
-        <div class="paper">
+        <div class="choice">
             <img src="/Images/paper.png" alt="Paper-image">
         </div>
-        <div class="scissor">
-            <img src="/Images/scissor.png" alt="Scissor-image">
+        <div class="choice">
+            <img src="/Images/scissors.png" alt="Scissor-image">
         </div>
     </div>
 
@@ -24,11 +25,11 @@
      <div class="score-board">
         <div class="user-score">
             <p>0</p>
-            <p>user</p>
+            <p>User-Score</p>
         </div>
         <div class="computer-score">
             <p>0</p>
-            <p>computer</p>
+            <p>Computer-Score</p>
         </div>
      </div>
      <!-- ASk user to move select his choice -->
