Created JS file and a few changes in html file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h2 class="title">Rock Paper Scissor</h2>
     <!-- Here We will display three images to user and ask him to select one to play the game. -->
     <div class="choices">
-        <div class="choice">
+        <div class="choice" id="rock">
             <img src="/Images/rock.png" alt="Rock-Image">
         </div>
-        <div class="choice">
+        <div class="choice" id="paper">
             <img src="/Images/paper.png" alt="Paper-image">
         </div>
-        <div class="choice">
+        <div class="choice" id="Scissor">
             <img src="/Images/scissors.png" alt="Scissor-image">
         </div>
     </div>
@@ -36,5 +36,8 @@
       <div class="msg">
         Select Your choice
       </div>
+
+      <script src="game.js">
+      </script>
 </body>
 </html>
