Completed the JS code for the game and a few updates in html and css file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="choice" id="paper">
             <img src="/Images/paper.png" alt="Paper-image">
         </div>
-        <div class="choice" id="Scissor">
+        <div class="choice" id="scissor">
             <img src="/Images/scissors.png" alt="Scissor-image">
         </div>
     </div>
@@ -24,11 +24,11 @@
     <!-- Now we will display the score board where we will display the scores of user and the computer too. -->
      <div class="score-board">
         <div class="user-score">
-            <p>0</p>
+            <p id="uScore"></p>
             <p>User-Score</p>
         </div>
         <div class="computer-score">
-            <p>0</p>
+            <p id="cScore"></p>
             <p>Computer-Score</p>
         </div>
      </div>
