--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- Here We will display three images to user and ask him to select one to play the game. -->
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="/Images/rock.png" alt="Rock-Image">
+            <img src="Images/rock.png" alt="Rock-Image">
         </div>
         <div class="choice" id="paper">
-            <img src="/Images/paper.png" alt="Paper-image">
+            <img src="Images/paper.png" alt="Paper-image">
         </div>
         <div class="choice" id="scissor">
-            <img src="/Images/scissors.png" alt="Scissor-image">
+            <img src="Images/scissors.png" alt="Scissor-image">
         </div>
     </div>
 
